# NotionRAGAgent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/: agent.py  prompts.py
ai/agent/: agent.py  prompts.py  tools.py
ai/mcp_conf/: notion_client.py  sync.py
ai/notion/: client.py  sync.py
api/: main.py
config/: settings.py
mcp_conf/: notion_client.py  sync.py
rag/: embeddings.py  indexer.py  retriever.py
src/: di.py  main.py
src/api/: read.py
