[project]
name = "notion-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "apscheduler>=3.11.2",
    "chromadb>=1.5.8",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "llama-index>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]
